更新集群相同规则配置