@@ -14,7 +14,8 @@
 package net.guerlab.cloud.loadbalancer.rule;
 
 import java.util.List;
-import java.util.stream.Collectors;
+
+import org.apache.commons.lang3.StringUtils;
 
 import org.springframework.cloud.client.ServiceInstance;
 import org.springframework.cloud.client.loadbalancer.Request;
@@ -29,25 +30,28 @@ import net.guerlab.cloud.loadbalancer.properties.ClusterSameProperties;
 public class ClusterSameRule extends BaseRule<ClusterSameProperties> {
 
 	/**
-	 * 集群名称.
-	 */
-	private final String clusterName;
-
-	/**
-	 * 通过集群名称和相同集群配置初始化相同集群规则.
+	 * 通过配置初始化相同集群规则.
 	 *
-	 * @param clusterName 集群名称
-	 * @param properties  相同集群配置
+	 * @param properties 配置
 	 */
-	public ClusterSameRule(String clusterName, ClusterSameProperties properties) {
+	public ClusterSameRule(ClusterSameProperties properties) {
 		super(properties);
-		this.clusterName = clusterName;
 	}
 
 	@Override
 	public List<ServiceInstance> choose(List<ServiceInstance> instances, Request<?> request) {
+		String clusterName = StringUtils.trimToNull(properties.getClusterName());
+
+		if (clusterName == null) {
+			return instances;
+		}
+
 		return instances.stream()
-				.filter(instance -> clusterName.equalsIgnoreCase(instance.getMetadata().get("nacos.cluster")))
-				.collect(Collectors.toList());
+				.filter(instance -> clusterName.equalsIgnoreCase(getInstanceClusterName(instance)))
+				.toList();
+	}
+
+	private String getInstanceClusterName(ServiceInstance instance) {
+		return instance.getMetadata().get(properties.getMetadataKey());
 	}
 }
